--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,5 +5,5 @@
 
 body {
     margin: 0;
-    background: no-repeat top/100% url('/public/vaz.webp');
+    background: no-repeat top/100% url('/public/vaz.jpg');
 }
