--- a/src/components/cardItem/CardItem.module.scss
+++ b/src/components/cardItem/CardItem.module.scss
@@ -17,7 +17,7 @@
 .item {
     margin-top: 30px;
     height: 100px;
-    background-color: #000;
+    background-color: #8b8787;
     padding: 10px;
     a {
         text-decoration: none;
